Update tmux.conf, try alternate install script

--- a/install
+++ b/install
@@ -1,9 +1,11 @@
 #!/usr/bin/env zsh
-pushd $DOTFILES
-for folder in $(echo $STOW_FOLDERS | sed "s/,/ /g")
-do
-    echo "stow $folder"
-    stow -D $folder
-    stow $folder
-done
-popd
+# pushd $DOTFILES
+# for folder in $(echo $STOW_FOLDERS | sed "s/,/ /g")
+# do
+#     echo "stow $folder"
+#     stow -D $folder
+#     stow $folder
+# done
+# popd
+
+for d in *(/); stow -v -t ~/ -S $d
